@@ -484,7 +484,8 @@ COpt::profiling_start("history");
 						$row["value"] = "";
 				}
 
-				$value = replace_value_by_map($row["value"], $row["valuemapid"]);
+				if($row["valuemapid"] > 0)
+					$value = replace_value_by_map($row["value"], $row["valuemapid"]);
 
 				$new_row = array(date("Y.M.d H:i:s",$row["clock"]));
 				if(in_array($item_type,array(ITEM_VALUE_TYPE_FLOAT,ITEM_VALUE_TYPE_UINT64)))
