@@ -119,7 +119,7 @@
 #define	ZBX_FS_DBL	"%f"
 
 #define	ZABBIX_REVDATE	"2 Juna 2006"
-#define	ZABBIX_VERSION	"1.1"
+#define	ZABBIX_VERSION	"1.1patch1"
 
 #define MAX_LOG_FILE_LEN (1024*1024)
 
