@@ -1,7 +1,12 @@
 Changes for 1.3:
 
+ - changed type of lastlogsize to long in structure METRIC (Alexei)
  - ZABBIX agent to bind even if TIME_WAIT sockets exist (Alexei)
  - ZABBIX server to bind even if TIME_WAIT sockets exist (Alexei)
+ - fixed notification report for Oracle (Eugene)
+ - fixed large history of alarms displaying (Eugene)
+ - fixed value mapping for latest data (Eugene)
+ - fixed value mapping for screens (Eugene)
 
 Changes for 1.1:
 
